Changed #info to 'position: fixed' so always visible when scrolling through images

--- a/WebFundamentals/APIs_and_AJAX/2_Whats_That_Pokemon/style.css
+++ b/WebFundamentals/APIs_and_AJAX/2_Whats_That_Pokemon/style.css
@@ -28,6 +28,9 @@ body h1 {
   width: 205px;
   border: 20px solid red;
   padding: 10px;
+  position: fixed;
+  top: 90px;
+  left: 710px;
 }
 
 #info .name {
